--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <title>My Trello</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/cs/index.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
     <body>
@@ -41,6 +41,6 @@
                 </div>      
             </div>
         </div>
-        <script src="index.js" async defer></script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
